# s3-message-service

./: .dockerignore  .env.example  .gitignore  Agent.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Dockerfile.prebuilt-builder  Dockerfile.prebuilt-builder.dockerignore  Dockerfile.prebuilt.cn  Dockerfile.prebuilt.cn.dockerignore  Dockerfile.prebuilt.dockerignore  docker-compose.prebuilt.cn.yml  docker-compose.prebuilt.yml  docker-compose.yml  go.mod
cmd/s3-message-service/: main.go
deploy/prebuilt/: README.md
docs/: ARCHITECTURE.md  BUILD.md  EXTERNAL_DOCS.md  RUST_DOCKER_DEPLOYMENT.md  SPEC.md  nextsession.md
internal/application/: service.go  service_test.go
internal/config/: config.go
internal/core/cursors/: cursors.go  cursors_test.go
internal/core/ids/: ids.go  ids_test.go
internal/core/keys/: keys.go  keys_test.go
internal/domain/: types.go
internal/httpapi/: server.go  server_test.go
internal/storage/: storage.go
internal/storage/localfs/: localfs.go  localfs_test.go
scripts/: build-prebuilt-binary.sh
src/: application.rs  config.rs  cursors.rs  domain.rs  error.rs  httpapi.rs  ids.rs  keys.rs  lib.rs  main.rs
src/storage/: b2.rs  localfs.rs  mod.rs
tests/: b2_e2e.rs
